requirements.txt update

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,26 @@
-h5py==3.12.1
-pandas==2.2.2
-numpy==2.0.1
-beautifulsoup4==4.12.3
-akshare==1.14.80
-html5lib==1.1
-matplotlib-inline==0.1.7
-numexpr==2.10.1
-openpyxl==3.1.5
-plotly==5.24.1
-pyecharts==2.0.6
-requests==2.32.3
-tables==3.10.1
-tabulate==0.9.0
-tqdm==4.66.5
-urllib3==2.2.3
+beautifulsoup4==4.13.5
+bs4==0.0.2
+certifi==2025.8.3
+charset-normalizer==3.4.3
+dotenv==0.9.9
+idna==3.10
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+numpy==2.3.2
+pandas==2.3.2
+prettytable==3.16.0
+pyecharts==2.0.8
+PyMySQL==1.1.2
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+pytz==2025.2
+requests==2.32.5
+simplejson==3.20.1
+six==1.17.0
+soupsieve==2.7
+SQLAlchemy==2.0.43
+typing_extensions==4.14.1
+tzdata==2025.2
+urllib3==2.5.0
+wcwidth==0.2.13
+window==0.0.3
