修改yml文件，运行频率改为交易日交易时间前后一小时与交易时间每15分钟一次

--- a/.github/workflows/update_display.yml
+++ b/.github/workflows/update_display.yml
@@ -3,7 +3,7 @@ name: quant data monitor html update
 on:
   workflow_dispatch:  # 手动触发
   schedule:
-    - cron: '0 * * * *'
+    - cron: '*/15 0,1,2,3,5,6,7 * * *'
 
 jobs:
   # 任务1：交易时间条件检查
@@ -25,7 +25,7 @@ jobs:
           if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
             echo "result=true" >> $GITHUB_OUTPUT
           else
-            echo "result=$(python check_trading.py --check-day-only)" >> $GITHUB_OUTPUT
+            echo "result=$(python check_trading.py)" >> $GITHUB_OUTPUT
           fi
 
   build:
